--- a/sass/base/_general.sass
+++ b/sass/base/_general.sass
@@ -15,7 +15,7 @@ p
   padding-bottom: 1rem
 p a
   text-decoration: underline
-  padding-bottom: 0.25rem
+  vertical-align: initial
 
 *
   box-sizing: border-box
@@ -23,6 +23,7 @@ p a
   vertical-align: middle
   margin: 0
   padding: 0
+  line-height: 1.25em
 
 span,.fa
   vertical-align: initial
